# seq-ann

./: .gitignore  AUTHORS.md  CODEBASE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
docs/: algorithm.md  authors.md  blast.md  conf.py  db.md  debug.md  history.md  index.md  installation.md  models.md  modules.md  readme.md  seqann.feature_client.apis.md  seqann.feature_client.md  seqann.feature_client.models.md  seqann.md  testing.md
scripts/: annotate_fasta.py  feature_lengths.py
seqann/: __init__.py  align.py  blast_cmd.py  gfe.py  sequence_annotation.py  util.py
seqann/models/: reference_data.py
tests/: test_feature.py  test_gfe.py  test_util.py
